# ChatrixCD

./: .env.example  .gitignore  AI_AGENT_IMPROVEMENT_PLAN.md  AI_AGENT_PLAN_SUMMARY.md  AI_AGENT_TASKS_INDEX.md  AI_AGENT_TASKS_OVERVIEW.txt  AI_AGENT_TASKS_README.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  BEFORE_AND_AFTER.md  BRANDING.md  BUILD_FIX_SUMMARY.md  BUILD_VERIFICATION_EVIDENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCURRENT_ARCHITECTURE.md  CONTRIBUTING.md  CSS_COMPLIANCE_AND_STARTUP_TESTS.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.alpine  Dockerfile.build  Dockerfile.cross  ENCRYPTION_FIXES_SUMMARY.md  ENCRYPTION_FIX_CHECKLIST.md  ENCRYPTION_FIX_SUMMARY.md  FEATURE_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_TEST_ENCRYPTION_SETUP.md  OIDC_INTEGRATION_PLAN.md  QUICKSTART.md  README.md  README_ENCRYPTION_FIXES.md  README_OLD.md  REMOTE_SETUP_INSTRUCTIONS.md  SECURITY.md  START_HERE.md  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/scripts/: calculate-version.sh
.github/workflows/: build.yml  pages.yml  release.yml  test-build.yml  test.yml
assets/: ADDING_LOGO.md  README.md
chatrixcd/: __init__.py  aliases.py  auth.py  bot.py  commands.py  config.py  config_wizard.py  file_watcher.py  formatters.py  main.py  messages.py  plugin_manager.py  redactor.py  semaphore.py  tui.py  tui_turbo.py  verification.py
chatrixcd/tui/: __init__.py  app.py  events.py  plugin_integration.py  registry.py
chatrixcd/tui/plugins/: aliases_tui.py  oidc_tui.py
chatrixcd/tui/screens/: base.py  config.py  logs.py  (+4 more)
docs/: .gitignore  ACCESSIBILITY.md  BUILD_WORKFLOW.md  CI_CD_OPTIMIZATION.md  CNAME  CUSTOMIZATION.md  EVALUATION_WEBHOOKS_WEBUI.md  GITHUB_PAGES_SETUP.md  Gemfile  METRICS_AND_COMMANDS.md  MIGRATION_PLAN_MESSAGES.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_SUMMARY.md  README.md  TUI.md  TUI_ARCHITECTURE.md  TUI_IMPLEMENTATION_SUMMARY.md  TUI_MIGRATION_GUIDE.md  TUI_QUICKSTART.md  TUI_TURBO_VISION_DESIGN.md  _config.yml  architecture.md  configuration.md  configuration.old.md  contributing.md  deployment.md  download.md  index.md  index.old.md  installation.md  quickstart.md  security.md  support.md
docs/_includes/: head.html
docs/_pages/: installation.md  quickstart.md  support.md
docs/assets/: README.md
docs/download/: index.html
plugins/aliases/: meta.json  plugin.json  plugin.py  readme.md
plugins/example_plugin/: meta.json  plugin.json  plugin.py  readme.md
plugins/oidc_auth/: meta.json  oidc_tui.py  plugin.json  plugin.py  readme.md
plugins/semaphore_poll/: meta.json  plugin.json  plugin.py  readme.md
plugins/semaphore_webhook/: meta.json  plugin.json  plugin.py  readme.md
scripts/: alpine_encryption_fix.sh
tests/: README_integration.md  __init__.py  integration_config.json  integration_config.json.example  run_integration_tests.py  test_aliases.py  test_aliases_plugin.py  test_auth.py  test_bot.py  test_cli.py  test_commands.py  test_config.py  test_device_info_logging.py  test_e2e_main.py  test_e2e_workflow.py  test_integration_matrix.py  test_messages.py  test_metrics_and_version.py  test_pet_scold_aliases.py  test_plugin_manager.py  test_redactor.py  test_run_mapped_switches.py  test_semaphore.py  test_tui.py  test_tui_core.py  test_tui_menu_fixes.py  test_tui_navigation.py  test_tui_pilot.py  test_tui_pilot_interactive.py  test_tui_turbo_pilot.py  test_verification.py  test_verification_cancellation.py  test_verification_e2e.py  test_workflow.py
(+22 files in other folders)
