[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrixcd"
version = "0.1.0"
description = "A Matrix bot for CI/CD automation with Semaphore UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "ChatrixCD Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "matrix-nio[e2e]>=0.24.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/CJFWeatherhead/ChatrixCD"

[project.scripts]
chatrixcd = "chatrixcd.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatrixcd*"]
