[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrixcd"
dynamic = ["version"]
description = "A Matrix bot for CI/CD automation with Semaphore UI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "ChatrixCD Contributors"}
]
keywords = ["matrix", "bot", "ci-cd", "automation", "semaphore", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "matrix-nio[e2e]>=0.24.0",
    "aiohttp>=3.9.0",
    "hjson>=3.1.0",
    "colorlog>=6.7.0",
    "textual>=0.47.0",
    "qrcode>=7.4.2",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/CJFWeatherhead/ChatrixCD"

[project.scripts]
chatrixcd = "chatrixcd.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatrixcd*"]

[tool.setuptools.dynamic]
version = {attr = "chatrixcd.__version__"}
